# lag-smartcard

./: CMakeLists.txt  README.md
base/: CMakeLists.txt
base/include/tsg/base/: allocator.hpp  assert.hpp  byte_array.hpp  byte_buffer.hpp  byte_heap_array.hpp  hex.hpp  hex_helper.hpp  memory.hpp  memory_handle.hpp  memory_view.hpp
base/include/tsg/base/mmgr/: mmgr.h
base/source/: mmgr.cpp
smartcard/: CMakeLists.txt
smartcard/include/tsg/smartcard/: atr.hpp  card_connection.hpp  command_apdu.hpp  response_apdu.hpp  smartcard_provider.hpp
smartcard/source/: card_connection_winscard.cpp  internal_winscard.hpp  smartcard_provider_winscard.cpp
